pl lang update 0.0.3a

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -166,7 +166,7 @@ nav
 	font-weight: 400 
 	line-height: 11px 
 	text-transform: uppercase 
-.adv-header 
+.adv-heade 
 	padding-top: 33px 
 	color: #222 
 	text-align: center 
